--- a/19 - Webcam Fun/style.css
+++ b/19 - Webcam Fun/style.css
@@ -12,8 +12,9 @@ html {
 }
 
 .photobooth {
-  background:white;
-  max-width:150rem;
+  background: white;
+  /*max-width: 150rem;*/
+  max-width: 640px;
   margin: 2rem auto;
   border-radius:2px;
 }
