--- a/24 - Sticky Nav/style-START.css
+++ b/24 - Sticky Nav/style-START.css
@@ -1,86 +1,106 @@
 html {
   box-sizing: border-box;
-  background:#eeeeee;
-  font-family:'helvetica neue';
+  background: #eeeeee;
+  font-family: 'helvetica neue';
   font-size: 20px;
   font-weight: 200;
 }
+
 body {
   margin: 0;
 }
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
 
 .site-wrap {
+  position: relative;
   max-width: 700px;
-  margin: 70px auto;
-  background:white;
-  padding:40px;
+  margin: 70px auto ;
+  background: white;
+  padding: 40px;
   text-align: justify;
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.05);
   transform: scale(0.98);
   transition: transform 0.5s;
 }
 
+.page--fixed-nav .site-wrap {
+  transform: scale(1);
+}
+
 header {
   text-align: center;
-  height:50vh;
-  background:url(http://wes.io/iEgP/wow-so-deep.jpg) bottom center no-repeat;
-  background-size:cover;
-  display:flex;
-  align-items:center;
+  height: 50vh;
+  background: url(http://wes.io/iEgP/wow-so-deep.jpg) bottom center no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
   justify-content: center;
+  margin-bottom: 0;
+  transition: all .25s linear;
 }
 
 h1 {
-  color:white;
+  color: white;
   font-size: 7vw;
-  text-shadow: 3px 4px 0 rgba(0,0,0,0.2)
+  text-shadow: 3px 4px 0 rgba(0, 0, 0, 0.2)
 }
 
-nav {
-  background:black;
-  top:0;
+.nav {
+  background: black;
+  top: 0;
   width: 100%;
-  transition:all 0.5s;
+  transition: all .5s linear;
   position: relative;
   z-index: 1;
 }
 
+.page--fixed-nav .nav {
+  position: fixed;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
 nav ul {
   margin: 0;
-  padding:0;
+  padding: 0;
   list-style: none;
-  display:flex;
+  display: flex;
+  transition: all .5s linear;
 }
 
 nav li {
-  flex:1;
+  flex: 1;
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all .5s linear;
 }
 
 li.logo {
-  max-width:0;
+  max-width: 0;
   overflow: hidden;
   background: white;
-  transition: all .5s;
+  transition: all .5s linear;
   font-weight: 600;
   font-size: 30px;
 }
 
+.page--fixed-nav .logo {
+  max-width: 100%;
+}
+
 li.logo a {
-  color:black;
+  color: black;
 }
 
 nav a {
   text-decoration: none;
-  padding:20px;
+  padding: 20px;
   display: inline-block;
-  color:white;
-  transition:all 0.2s;
+  color: white;
+  transition: all 0.2s;
   text-transform: uppercase;
 }
