--- a/29 - Countdown Timer/style.css
+++ b/29 - Countdown Timer/style.css
@@ -2,7 +2,7 @@ html {
   box-sizing: border-box;
   font-size: 10px;
   background: #8E24AA;
-  background: linear-gradient(45deg,  #42a5f5 0%,#478ed1 50%,#0d47a1 100%);
+  background: linear-gradient(45deg, #42a5f5 0%, #478ed1 50%, #0d47a1 100%);
 }
 
 *, *:before, *:after {
@@ -10,73 +10,90 @@ html {
 }
 
 body {
-  margin:0;
+  margin: 0;
   text-align: center;
   font-family: 'Inconsolata', monospace;
 }
 
-.display__time-left {
-  font-weight: 100;
-  font-size: 20rem;
-  margin: 0;
-  color:white;
-  text-shadow:4px 4px 0 rgba(0,0,0,0.05);
-}
-
 .timer {
-  display:flex;
+  display: flex;
   min-height: 100vh;
-  flex-direction:column;
+  flex-direction: column;
 }
 
 .timer__controls {
   display: flex;
 }
 
-.timer__controls > * {
-  flex:1;
+.timer__controls>* {
+  flex: 1;
 }
 
 .timer__controls form {
-  flex:1;
-  display:flex;
+  flex: 1;
+  display: flex;
 }
 
 .timer__controls input {
-  flex:1;
-  border:0;
-  padding:2rem;
+  flex: 1;
+  border: 0;
+  padding: 2rem;
+  font-family: inherit;
+  font-size: 2rem;
 }
 
 .timer__button {
-  background:none;
-  border:0;
+  background: none;
+  border: 0;
   cursor: pointer;
-  color:white;
+  color: white;
   font-size: 2rem;
   text-transform: uppercase;
-  background:rgba(0,0,0,0.1);
-  border-bottom:3px solid rgba(0,0,0,0.2);
-  border-right:1px solid rgba(0,0,0,0.2);
-  padding:1rem;
+  background: rgba(0, 0, 0, 0.1);
+  border-bottom: 3px solid rgba(0, 0, 0, 0.2);
+  border-right: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 1rem;
   font-family: 'Inconsolata', monospace;
 }
 
-.timer__button:hover,
-.timer__button:focus {
-  background:rgba(0,0,0,0.2);
-  outline:0;
+.timer__button:hover, .timer__button:focus {
+  background: rgba(0, 0, 0, 0.2);
+  outline: 0;
 }
 
 .display {
-  flex:1;
-  display:flex;
+  flex: 1;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  transition: all .5s;
+}
+
+[data-state="ready"] {
+  opacity: .5;
+}
+
+[data-state="finished"] {
+  opacity: 1;
+  animation: blink 1s infinite ease-out;
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0;
+  }
+}
+
+.display__time-left {
+  font-weight: 100;
+  font-size: 20rem;
+  margin: 0;
+  color: white;
+  text-shadow: 4px 4px 0 rgba(0, 0, 0, 0.05);
 }
 
 .display__end-time {
   font-size: 4rem;
-  color:white;
+  color: white;
 }
